# tvscreener

./: .dockerignore  .env  .env.example  Dockerfile  README.md  ai_trading_platform_design.md  docker-compose.prod.yml  docker-compose.yml  master_system_design_prompt.md  mkdocs.yml  pyproject.toml  specialized_prompts_library.md
.agent/workflows/: launch-stack.md
.bruno/: bruno.json
.bruno/analysis/: accuracy-dashboard.bru  exit-analysis.bru  pattern-accuracy.bru  position-risk.bru  recent-outcomes.bru  sentiment-synthesis.bru  volume-profile.bru
.bruno/chat/: send-message.bru
.bruno/environments/: local.bru
.bruno/health/: health-check.bru
.bruno/market/: get-stock-quote.bru  vision-analyze.bru
.bruno/watchlist/: get-watchlist.bru
.github/workflows/: ci.yml  codecov.yml  deploy-pages.yml  pip-publish.yml
app/: index.html
app/js/: code-generator.js
backend/: import_trace.txt  import_trace_results.txt  locustfile.py  startup_test.txt  test_out.txt  test_output.txt  test_output2.txt  verify_imports.py
backend/app/: __init__.py  cache.py  config.py  error_handlers.py  guardrails.py  main.py  metrics.py  observability.py  routes.py  routes_chat_history.py  routes_market.py  routes_preferences.py  routes_presets.py  routes_watchlist.py  websocket.py
backend/tests/: pytest.ini  test_auth.py  test_core_routes.py  test_phase1.py  test_phase10.py  test_phase11.py  test_phase12.py  test_phase13.py  test_phase14.py  test_phase15.py  test_phase16.py  test_phase2.py  test_phase3.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9.py  test_watchlist_routes.py
docs/: DEPLOYMENT.md  changelog.md  index.html  index.md
docs/api/: fields.md
frontend/: Dockerfile  biome.json  biome_check_final.txt  biome_clean.txt  biome_final.txt  biome_final2.txt  biome_full.txt  biome_lint_output.txt  biome_out.txt  biome_output.txt  biome_output2.txt  biome_output3.txt  biome_output4.txt  biome_output5.txt  biome_sorted.txt  build_output.txt  index.html  nginx.conf  package-lock.json  package.json  test_output.txt  vite.config.ts  vitest.config.ts
notebooks/: Stock.ipynb  Streaming.ipynb  example.ipynb
scripts/: seed_market_data.py  seed_rag.py
traefik/: dynamic.yml  traefik.yml
tvscreener/: __init__.py  beauty.py
(+196 files in other folders)
